# libsodium

./: CMakeLists.txt
src/crypto_aead/aegis128l/: aegis128l_aesni.c  aegis128l_armcrypto.c  aegis128l_soft.c
src/crypto_aead/aegis256/: aegis256_aesni.c  aegis256_armcrypto.c  aegis256_soft.c
src/crypto_aead/aes256gcm/aesni/: aead_aes256gcm_aesni.c
src/crypto_aead/aes256gcm/armcrypto/: aead_aes256gcm_armcrypto.c
src/crypto_core/softaes/: softaes.c
src/crypto_generichash/blake2b/ref/: blake2b-ref.c
src/crypto_onetimeauth/poly1305/donna/: poly1305_donna.c
src/include/sodium/: core.h  crypto_aead_aegis128l.h  crypto_aead_aegis256.h  crypto_aead_aes256gcm.h  crypto_aead_chacha20poly1305.h  crypto_aead_xchacha20poly1305.h  crypto_auth.h  crypto_auth_hmacsha256.h  crypto_auth_hmacsha512.h  crypto_auth_hmacsha512256.h  crypto_box.h  crypto_box_curve25519xchacha20poly1305.h  crypto_box_curve25519xsalsa20poly1305.h  crypto_core_ed25519.h  crypto_core_hchacha20.h  crypto_core_hsalsa20.h  crypto_core_ristretto255.h  crypto_core_salsa20.h  crypto_core_salsa2012.h  crypto_core_salsa208.h  crypto_generichash.h  crypto_generichash_blake2b.h  crypto_hash.h  crypto_hash_sha256.h  crypto_hash_sha512.h  crypto_kdf.h  crypto_kdf_blake2b.h  crypto_kdf_hkdf_sha256.h  crypto_kdf_hkdf_sha512.h  crypto_kx.h  crypto_onetimeauth.h  crypto_onetimeauth_poly1305.h  crypto_pwhash.h  crypto_pwhash_argon2i.h  crypto_pwhash_argon2id.h  crypto_pwhash_scryptsalsa208sha256.h  crypto_scalarmult.h  crypto_scalarmult_curve25519.h  crypto_scalarmult_ed25519.h  crypto_scalarmult_ristretto255.h  (+22 more)
(+3 files in other folders)
